# MyselfBlockchain

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push_to_any_branchs.yml
app/: Dockerfile  main.py  utils.py
app/handlers/: block.py  chain.py  mine.py
app/pydantic_models/: block.py  chain.py
app/routers/: block.py  chain.py
tests/: fixtures.py  test_chain.py  test_create_block.py  test_useful.py
